@startuml

class User {
    + id: int
    + username: string
    + passwordHash: string
    + displayName: string
    + role: string
    + lastAccessed: timestamp

    + processComplaint(c: Complaint): void
}

class Tenant {
    + id: int
    + fullName: string
    + phoneNumber: string
    + originRegion: string
    + isVerified: boolean

    + sendMessage(msg: string): void
    + createComplaint(desc: string): Complaint
}

class Room {
    + id: int
    + roomNumber: string
    + roomType: string
    + monthlyPrice: int
    + isActive: boolean
}

class Lease {
    + id: int
    + startDate: timestamp
    + endDate: timestamp
    + isActive: boolean

    + generateInvoice(): Invoice
}

class Invoice {
    + id: int
    + amount: int
    + dueDate: timestamp
    + paidAt: timestamp
    + duitkuReference: string
    + callbackPayload: string
    + status: string
    + createdAt: timestamp

    + markAsPaid(): void
}

class ChatbotMessage {
    + id: int
    + direction: string
    + message: string
    + sentAt: timestamp
}

class Notification {
    + id: int
    + type: string
    + status: string
    + createdAt: timestamp

    + send(): void
}

class AuditLog {
    + id: int
    + action: string
    + tableName: string
    + recordId: int
    + details: json
    + createdAt: timestamp
}

class Complaint {
    + id: int
    + description: string
    + status: string
    + processedAt: timestamp
    + resolveNotes: string
    + resolvedAt: timestamp
    + createdAt: timestamp

    + resolve(): void
}

class BotAuth {
    + key: string
    + value: string
}

' RELATIONSHIPS (OBJECT-BASED)
Tenant "1" -- "*" Lease
Room "1" -- "*" Lease
Lease "1" -- "*" Invoice
Tenant "1" -- "*" ChatbotMessage
Tenant "1" -- "*" Notification
Tenant "1" -- "*" Complaint
User "1" -- "*" Complaint : resolves
User "1" -- "*" AuditLog : records
Invoice "1" -- "*" Notification
ChatbotMessage "1" -- "0..1" Notification

@enduml